Name: cgi
Version: 2006.8.5
Copyright: Bjorn Bringert, Andy Gill, Ian Lynagh, Erik Meijer, 
           Sven Panne, Jeremy Shaw
Maintainer: bjorn@bringert.net
Author: Bjorn Bringert
Homepage: http://www.cs.chalmers.se/~bringert/darcs/haskell-cgi/doc/
License: BSD3
License-file: LICENSE
Build-depends: base, network, parsec, mtl, xhtml
Extensions: 
Synopsis: A Haskell library for writing CGI programs
Description:
 This is a Haskell library for writing CGI programs. 
 Its features include:
 - Access to CGI parameters (e.g. form input) from
   both GET and POST requests.
 - Access to CGI environment variables.
 - Ability to set arbitrary response headers.
 - Support for HTTP cookies.
 - Efficient file upload support.
 - Wrapper functions for compatibility with the existing
   Network.CGI module.
Exposed-Modules: 
   Network.CGI,
   Network.CGI.Monad,
   Network.CGI.Protocol,
   Network.CGI.Compat,
   Network.CGI.Multipart,
   Network.CGI.RFC822Headers,
   Network.CGI.Cookie
ghc-options: -O2 -Wall

--Executable:     printinput
--Main-Is:        printinput.hs
--Hs-Source-Dir:  examples

--Executable:     redirect
--Main-Is:        redirect.hs
--Hs-Source-Dir:  examples

--Executable:     upload
--Main-Is:        upload.hs
--Hs-Source-Dir:  examples

