Name: cgi
Version: 2006.10.25
Copyright: Bjorn Bringert, Andy Gill, Ian Lynagh, Erik Meijer, 
           Sven Panne, Jeremy Shaw
Maintainer: bjorn@bringert.net
Author: Bjorn Bringert
Homepage: http://www.cs.chalmers.se/~bringert/darcs/haskell-cgi/doc/
License: BSD3
License-file: LICENSE
Build-depends: base, network, parsec, mtl, xhtml
Extensions: OverlappingInstances, UndecidableInstances
Synopsis: A Haskell library for writing CGI programs
Description:
 This is a Haskell library for writing CGI programs. 
Exposed-Modules: 
   Network.CGI,
   Network.CGI.Monad,
   Network.CGI.Protocol,
   Network.CGI.Compat,
   Network.CGI.Cookie
Other-modules:
   Network.CGI.Multipart,
   Network.CGI.RFC822Headers
ghc-options: -O2 -Wall

--Executable:     printinput
--Main-Is:        printinput.hs
--Hs-Source-Dir:  examples

--Executable:     redirect
--Main-Is:        redirect.hs
--Hs-Source-Dir:  examples

--Executable:     upload
--Main-Is:        upload.hs
--Hs-Source-Dir:  examples

